--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
       "sqlite3": "^5.0.2",
-      "typeorm": "0.2.32"
+      "typeorm": "0.2.32",
+      "uuid": "^3.4.0"
    },
    "devDependencies": {
       "@types/express": "^4.17.11",
       "@types/node": "^8.0.29",
+      "@types/uuid": "^8.3.0",
       "ts-node": "3.3.0",
       "ts-node-dev": "^1.1.6",
       "typescript": "3.3.3333"
