--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "express": "^4.17.1",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
+      "socket.io": "^4.0.1",
       "sqlite3": "^5.0.2",
       "typeorm": "0.2.32",
       "uuid": "^3.4.0"
@@ -29,6 +30,7 @@
    "devDependencies": {
       "@types/express": "^4.17.11",
       "@types/node": "^8.0.29",
+      "@types/socket.io": "^2.1.13",
       "@types/uuid": "^8.3.0",
       "ts-node": "3.3.0",
       "ts-node-dev": "^1.1.6",
