--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
    },
    "homepage": "https://github.com/forestus/Nlw5#readme",
    "dependencies": {
+      "ejs": "^3.1.6",
       "express": "^4.17.1",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
@@ -28,6 +29,7 @@
       "uuid": "^3.4.0"
    },
    "devDependencies": {
+      "@types/ejs": "^3.0.6",
       "@types/express": "^4.17.11",
       "@types/node": "^8.0.29",
       "@types/socket.io": "^2.1.13",
