--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,24 +1,9 @@
 {
-   "type": "sqlite",
-   "host": "localhost",
-   "port": 3306,
-   "username": "test",
-   "password": "test",
-   "database": "./src/database/database.sqlite",
-   "synchronize": true,
-   "logging": false,
-   "entities": [
-      "src/entities/**.ts"
-   ],
-   "migrations": [
-      "src/database/migrations/**/*.ts"
-   ],
-   "subscribers": [
-      "src/subscriber/**/*.ts"
-   ],
-   "cli": {
-      "entitiesDir": "src/entities",
-      "migrationsDir": "src/database/migrations",
-      "subscribersDir": "src/subscriber"
-   }
+    "type": "sqlite",
+    "database": "./src/database/database.sqlite",
+    "migrations": ["./src/database/migrations/**.ts"],
+    "entities": ["./src/entities/**.ts"],
+    "cli": {
+        "migrationsDir": "./src/database/migrations"
+    }
 }
