--- a/package.json
+++ b/package.json
@@ -1,41 +1,27 @@
 {
-   "name": "Nlw5",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
-   "scripts": {
-      "start": "ts-node src/index.ts",
-      "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
-   },
-   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/forestus/Nlw5.git"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "bugs": {
-      "url": "https://github.com/forestus/Nlw5/issues"
-   },
-   "homepage": "https://github.com/forestus/Nlw5#readme",
-   "dependencies": {
-      "ejs": "^3.1.6",
-      "express": "^4.17.1",
-      "mysql": "^2.14.1",
-      "reflect-metadata": "^0.1.10",
-      "socket.io": "^4.0.1",
-      "sqlite3": "^5.0.2",
-      "typeorm": "0.2.32",
-      "uuid": "^3.4.0"
-   },
-   "devDependencies": {
-      "@types/ejs": "^3.0.6",
-      "@types/express": "^4.17.11",
-      "@types/node": "^8.0.29",
-      "@types/socket.io": "^2.1.13",
-      "@types/uuid": "^8.3.0",
-      "ts-node": "3.3.0",
-      "ts-node-dev": "^1.1.6",
-      "typescript": "3.3.3333"
-   }
+  "name": "nlw5",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+  },
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.0.1",
+    "socket.io-client": "^4.0.1",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.32",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/socket.io": "^2.1.13",
+    "@types/uuid": "^8.3.0",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4"
+  }
 }
